WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237856
[WebAuthn] Mock UI interactions whenever virtual authenticators are in use.
https://bugs.webkit.org/show_bug.cgi?id=237856
Summary
[WebAuthn] Mock UI interactions whenever virtual authenticators are in use.
pascoe@apple.com
Reported
2022-03-14 16:02:30 PDT
Which UI option to choose is unspecified. The convention is to select the first assertion / creation option.
Attachments
Patch
(5.68 KB, patch)
2022-03-14 19:39 PDT
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-14 16:02:39 PDT
<
rdar://problem/90274854
>
pascoe@apple.com
Comment 2
2022-03-14 19:39:55 PDT
Created
attachment 454652
[details]
Patch
Brent Fulgham
Comment 3
2022-03-15 16:14:19 PDT
Comment on
attachment 454652
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=454652&action=review
r=me
> Source/WebKit/UIProcess/WebAuthentication/AuthenticatorManager.h:-100 > - void decidePolicyForLocalAuthenticator(CompletionHandler<void(LocalAuthenticatorPolicy)>&&) final;
It might be enough to just remove 'final' on these two methods, and not make them public.
> Source/WebKit/UIProcess/WebAuthentication/Virtual/VirtualAuthenticatorManager.h:43 > + void runPanel();
void runPanel() override; This can also be 'private', since it is an override of the parent class method.
EWS
Comment 4
2022-03-15 16:25:04 PDT
Committed
r291321
(
248460@main
): <
https://commits.webkit.org/248460@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454652
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug