[WebAuthn] Mock UI interactions whenever virtual authenticators are in use. https://bugs.webkit.org/show_bug.cgi?id=237856 rdar://problem/90274854

Reviewed by Brent Fulgham.

Tested by wpt's webauthn tests.

* UIProcess/WebAuthentication/AuthenticatorManager.h:
* UIProcess/WebAuthentication/Virtual/VirtualAuthenticatorManager.cpp:
(WebKit::VirtualAuthenticatorManager::runPanel):
(WebKit::VirtualAuthenticatorManager::selectAssertionResponse):
(WebKit::VirtualAuthenticatorManager::decidePolicyForLocalAuthenticator):
* UIProcess/WebAuthentication/Virtual/VirtualAuthenticatorManager.h:



Canonical link: https://commits.webkit.org/248460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291321 268f45cc-cd09-0410-ab3c-d52691b4dbfc