Source/WebKit/UIProcess/WebAuthentication/AuthenticatorManager.h
@@ -80,6 +80,12 @@ protected:
     void clearState();
     void invokePendingCompletionHandler(Respond&&);
 
+    void decidePolicyForLocalAuthenticator(CompletionHandler<void(LocalAuthenticatorPolicy)>&&);
+    TransportSet getTransports() const;
+    virtual void runPanel();
+    void selectAssertionResponse(Vector<Ref<WebCore::AuthenticatorAssertionResponse>>&&, WebAuthenticationSource, CompletionHandler<void(WebCore::AuthenticatorAssertionResponse*)>&&);
+    void startDiscovery(const TransportSet&);
+
 private:
     enum class Mode {
         Compatible,
@@ -96,8 +102,6 @@ private:
     void downgrade(Authenticator* id, Ref<Authenticator>&& downgradedAuthenticator) final;
     void authenticatorStatusUpdated(WebAuthenticationStatus) final;
     void requestPin(uint64_t retries, CompletionHandler<void(const WTF::String&)>&&) final;
-    void selectAssertionResponse(Vector<Ref<WebCore::AuthenticatorAssertionResponse>>&&, WebAuthenticationSource, CompletionHandler<void(WebCore::AuthenticatorAssertionResponse*)>&&) final;
-    void decidePolicyForLocalAuthenticator(CompletionHandler<void(LocalAuthenticatorPolicy)>&&) final;
     void requestLAContextForUserVerification(CompletionHandler<void(LAContext *)>&&) final;
     void cancelRequest() final;
 
@@ -108,13 +112,10 @@ private:
     virtual void filterTransports(TransportSet&) const;
     virtual void runPresenterInternal(const TransportSet&);
 
-    void startDiscovery(const TransportSet&);
     void initTimeOutTimer();
     void timeOutTimerFired();
-    void runPanel();
     void runPresenter();
     void restartDiscovery();
-    TransportSet getTransports() const;
     void dispatchPanelClientCall(Function<void(const API::WebAuthenticationPanel&)>&&) const;
 
     // Request: We only allow one request per time. A new request will cancel any pending ones.
